src/comps/Browse.module.css
.wrapper {
  display: flex;
  flex-direction: column;
  overflow: hidden;
}

.links {
  flex: 0 0 30px;
  display: flex;
  justify-content: stretch;
}

.link,
.activeLink {
  flex-grow: 1;
  text-align: center;
  font-size: 16px;
  font-weight: bold;
  padding: 7.5px;
  cursor: pointer;
}

.link {
  color: var(--text-color);
}

.activeLink {
  color: var(--feature-color);
}

.link:hover,
.activeLink:hover {
  background-color: var(--grey-color-5);
}

.videos {
  flex: 1;
  overflow-y: auto;
  overflow-x: hidden;
}

.empty {
  flex: 1;
  padding: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: 24px;
  font-weight: bold;
  color: var(--grey-color-4);
}

.emptyIcon {
  display: block;
  margin: 20px 0;
}

.emptyIcon :global(i.grey.icon) {
  color: var(--grey-color-4) !important;
}

